<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="otf.project.otf.MainActivity">

    <LinearLayout
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

        <LinearLayout
            android:id="@+id/user_group_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                style="?android:attr/textAppearanceSmall"
                android:text="@string/your_group_title"
                android:layout_margin="16dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="center"
                android:id="@+id/user_group_view"
                style="?android:attr/textAppearanceButton"
                android:text="@string/no_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/no_group_description"
                android:gravity="center"
                style="?android:attr/textAppearanceSmall"
                android:text="@string/please_wait_for_group_invitation"
                android:layout_margin="16dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:gravity="center"
            android:id="@+id/user_config_view"
            style="?android:attr/textAppearanceButton"
            android:text="@string/no_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:visibility="gone"
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:gravity="center"
                    style="?android:attr/textAppearanceSmall"
                    android:text="@string/available_group_title"
                    android:layout_margin="16dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/clients_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
